# ai-mentor-bot

./: .env.example  .gitignore  Dockerfile  OODA_FIX_PLAN.md  README.md  SESSION_STATE.md  alembic.ini  count_events.py  pyproject.toml  render.yaml  run_bot.bat
.github/workflows/: keepalive.yml
_pathway_ref/Pathway-main/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app-workflow.md  app.py  langgraph.json  pyproject.toml
_pathway_ref/Pathway-main/.github/workflows/: activity-sync.yml  backup.yml  ci.yml  daily-nudge.yml  deploy.yml  evening-reflection.yml  maintenance.yml  morning-checkin.yml  weekly-digest.yml  weekly-prune.yml  weekly-review.yml
_pathway_ref/Pathway-main/docs/: README.md  configuration.md  deployment.md  quickstart.md  usage.md
_pathway_ref/Pathway-main/migrations/: env.py
_pathway_ref/Pathway-main/migrations/versions/: 20260606_0001_initial_schema.py  20260607_0002_add_interaction_state.py  20260609_0003_structured_logs_and_goal_status.py  20260609_0004_topic_mastery.py  20260609_0005_dedup_and_model_logs.py  20260610_0006_pgvector_embeddings.py  20260610_0007_multi_goals_per_day.py
_pathway_ref/Pathway-main/src/pathwayai_backend/: __init__.py  api.py  cli.py  config.py  main.py  schemas.py
_pathway_ref/Pathway-main/src/pathwayai_backend/core/: logging.py  middleware.py  security.py  tracing.py  version.py
_pathway_ref/Pathway-main/src/pathwayai_backend/db/: models.py  repositories.py  session.py
_pathway_ref/Pathway-main/src/pathwayai_backend/integrations/: base.py  email.py  github.py  leetcode.py  telegram.py
_pathway_ref/Pathway-main/src/pathwayai_backend/llm/: __init__.py  embeddings.py  gateway.py
_pathway_ref/Pathway-main/src/pathwayai_backend/prompts/: __init__.py  mentor.py
_pathway_ref/Pathway-main/src/pathwayai_backend/services/: __init__.py  coordinator.py  telegram_updates.py  tutor.py
_pathway_ref/Pathway-main/src/pathwayai_backend/workflows/: __init__.py  conversation.py  mentor.py  scoring.py  studio.py
_pathway_ref/Pathway-main/tests/: test_config.py  test_database_integration.py  test_health.py  test_integrations.py  test_model_gateway.py  test_scoring.py  test_security.py  test_telegram_workflows.py
alembic/: env.py
alembic/versions/: 7fc1fa8a1239_initial_schema.py
app/: config.py  diagnostics.py  main.py
app/agents/: graph.py  llm_router.py  schemas.py
app/api/: health.py
app/bot/: app.py  (+5 more)
content/: roadmap.yaml
docs/: 01_PRODUCT_SPEC.md  02_ENGINEERING_DESIGN.md  03_DEVELOPMENT_PLAN.md
tests/: conftest.py  factories.py
(+54 files in other folders)
