[project]
name = "ai-mentor-bot"
version = "0.1.0"
description = "Personal AI mentor Telegram bot teaching an AI engineering roadmap"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "alembic>=1.13",
    "python-telegram-bot[job-queue]>=21.0,<22",
    "httpx>=0.27",
    "jinja2>=3.1",
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "tzdata>=2024.1",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
