[project]
name = "pathwayai-backend"
version = "0.1.0"
description = "Agentic AI tutor backend with FastAPI, LangGraph, and Telegram integration"
readme = "README.md"
authors = [
    { name = "Ayush Kumar", email = "ayushkumar85385@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.18.0",
    "langchain-core>=1.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "sqlalchemy>=2.0.50",
    "structlog>=24.1.0,<26",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
pathwayai-backend = "pathwayai_backend:main"
pathwayai-set-webhook = "pathwayai_backend.cli:set_telegram_webhook"
pathwayai-backfill-embeddings = "pathwayai_backend.cli:backfill_embeddings"
pathwayai-clear-reply-keyboard = "pathwayai_backend.cli:clear_reply_keyboard"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.2.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require an isolated PostgreSQL database",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
